--- a/code/style.css
+++ b/code/style.css
@@ -1,140 +1,148 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  background: #0026ff;
+.body {
+    margin: auto 0;
+    padding: 0;
+    font-family: YouSans, Helvetica Neue, Helvetica, Arial, sans-serif;
+    background: #0a7e85;
+    width: 100%;
 }
 
-h1 {
-  font-weight: bold;
-  font-size: 44px;
-  line-height: 34px;
-  color: #fff;
-  text-align: center;
+.logo {
+    font-weight: bold;
+    font-size: 44px;
+    line-height: 34px;
+    color: rgb(0 40 69);
+    text-align: left;
+    padding: 20px;
+    padding-left: 10%;
+    width: 100%;
+    height: 90px;
+    margin: auto 0;
+    background: white;
 }
 
-h2 {
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 34px;
-  color: #fff;
-  text-align: center;
-  margin-bottom: 36px;
+.intro-text {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 34px;
+    color: white;
+    text-align: center;
+    margin-bottom: 36px;
 }
 
-p {
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 28px;
-  margin: 0;
+.text-message {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    margin: 0;
 }
 
-input {
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px 0 0 4px;
-  background: #e5e9ff;
-  color: #0026ff;
-  padding: 16px;
-  font-size: 16px;
-  font-family: 'Montserrat';
-  font-weight: 600;
-  line-height: 26px;
-  flex: 1;
+.user-input {
+    box-sizing: border-box;
+    border: none;
+    border-radius: 4px 0 0 4px;
+    background: white;
+    color: #0a7e85;
+    padding: 16px;
+    font-size: 16px;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    line-height: 26px;
+    flex: 1;
 }
 
 main {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 700px;
-  height: 600px;
-  border-radius: 30px;
-  background: #fff;
-  padding: 20px 24px;
-  padding-top: 0;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 700px;
+    height: 600px;
+    border-radius: 30px;
+    background: #eefaf7;
+    padding: 20px 24px;
+    padding-top: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
 .chat {
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
-  overflow: scroll;
-  flex-direction: column;
-  padding-bottom: 16px;
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+    overflow: scroll;
+    flex-direction: column;
+    padding-bottom: 16px;
 }
 
 .bot-msg {
-  display: flex;
-  margin: 16px 8px 0 0;
-  flex-shrink: 0;
+    display: flex;
+    margin: 16px 8px 0 0;
+    flex-shrink: 0;
 }
 
 .user-msg {
-  display: flex;
-  justify-content: flex-end;
-  margin: 16px 0 0 8px;
-  flex-shrink: 0;
+    display: flex;
+    justify-content: flex-end;
+    margin: 16px 0 0 8px;
+    flex-shrink: 0;
 }
 
 .bot-msg img,
 .user-msg img {
-  width: 60px;
-  height: 60px;
+    width: 60px;
+    height: 60px;
 }
 
 .bubble {
-  background: #e5e9ff;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 26px;
-  padding: 16px 24px;
-  color: #0026ff;
-  max-width: 40%;
+    background: white;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    padding: 16px 24px;
+    color: #0a7e85;
+    max-width: 60%;
 }
 
 .bot-bubble {
-  border-radius: 0px 26px 26px 26px;
-  margin-left: 8px;
+    border-radius: 0px 26px 26px 26px;
+    margin-left: 8px;
 }
 
 .user-bubble {
-  border-radius: 26px 0 26px 26px;
-  margin-right: 8px;
+    border-radius: 26px 0 26px 26px;
+    margin-right: 8px;
 }
 
 .input-wrapper {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .input-wrapper form {
-  width: 100%;
-  display: flex;
+    width: 100%;
+    display: flex;
 }
 
-button {
-  background-color: #0026ff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  padding: 16px 40px;
-  margin-right: 4px;
-  font-size: 16px;
-  line-height: 26px;
-  font-family: 'Montserrat';
-  font-weight: 500;
-  cursor: pointer;
-  transition: all 0.3s ease;
+.send-btn {
+    background-color: rgb(0 40 69);
+    color: white;
+    border: none;
+    width: 30%;
+    border-radius: 4px;
+    padding: 13px 30px;
+    margin-right: 4px;
+    font-size: 16px;
+    line-height: 26px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    cursor: text;
+    transition: all 0.3s ease;
 }
 
-button:hover {
-  opacity: 0.9;
-  transition: all 0.2s ease;
+.send-btn:hover {
+    opacity: 0.9;
+    transition: all 0.2s ease;
 }
